--- a/index.html
+++ b/index.html
@@ -102,33 +102,33 @@
   <div class="date">2025-08-31 (Total Odds: 2.01)</div>
 
   <div class="card">
-    <div class="league">Turkey - Süper Lig</div>
+    <div class="league">spain : laliga 2</div>
     <div class="match">
-      <div class="teams">Trabzonspor vs Samsunspor</div>
-      <div class="pick">Over 1.5</div>
-    </div>
-    <div class="odds">Odds: 1.25 | Score: -</div>
-    <div class="status win">win</div>
-  </div>
-
-  <div class="card">
-    <div class="league">Italy - Serie A</div>
-    <div class="match">
-      <div class="teams">Inter vs Udinese</div>
-      <div class="pick">Home Win</div>
-    </div>
-    <div class="odds">Odds: 1.33 | Score: -</div>
-    <div class="status lose">lose</div>
-  </div>
-
-  <div class="card">
-    <div class="league">Belgium - Jupiler Pro League</div>
-    <div class="match">
-      <div class="teams">Genk vs Zulte Waregem</div>
-      <div class="pick">Over 0.5 HT</div>
+      <div class="teams">leganes vs la coruna</div>
+      <div class="pick">DC 1X</div>
     </div>
     <div class="odds">Odds: 1.21 | Score: -</div>
-    <div class="status win">win</div>
+    <div class="status win">pending</div>
+  </div>
+
+  <div class="card">
+    <div class="league">inggris national liga</div>
+    <div class="match">
+      <div class="teams">chelmsford vs farnborough</div>
+      <div class="pick">Over 1.5</div>
+    </div>
+    <div class="odds">Odds: 1.33 | Score: -</div>
+    <div class="status win">pending</div>
+  </div>
+
+  <div class="card">
+    <div class="league">Romania superliga </div>
+    <div class="match">
+      <div class="teams">farul constanta vs petrolul</div>
+      <div class="pick">DC 1x</div>
+    </div>
+    <div class="odds">Odds: 1.21 | Score: -</div>
+    <div class="status win">pending</div>
   </div>
 
 </body>
