--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <div class="pick">DC 1X</div>
     </div>
     <div class="odds">Odds: 1.21 | Score: -</div>
-    <div class="status win">pending</div>
+    <div class="status win">WIN</div>
   </div>
 
   <div class="card">
@@ -118,7 +118,7 @@
       <div class="pick">Over 1.5</div>
     </div>
     <div class="odds">Odds: 1.33 | Score: -</div>
-    <div class="status win">pending</div>
+    <div class="status win">win</div>
   </div>
 
   <div class="card">
@@ -128,7 +128,7 @@
       <div class="pick">DC 1x</div>
     </div>
     <div class="odds">Odds: 1.21 | Score: -</div>
-    <div class="status win">pending</div>
+    <div class="status win">WIN</div>
   </div>
 
 </body>
