--- a/index.html
+++ b/index.html
@@ -91,45 +91,116 @@
       background: #e74c3c;
       color: #fff;
     }
+
+    /* login overlay */
+    #login {
+      position: fixed;
+      inset: 0;
+      background: #111;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    #login form {
+      background: #222;
+      padding: 20px;
+      border-radius: 10px;
+      text-align: center;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.5);
+    }
+    #login input {
+      padding: 10px;
+      margin-bottom: 10px;
+      border: none;
+      border-radius: 5px;
+      width: 200px;
+      text-align: center;
+    }
+    #login button {
+      padding: 10px 20px;
+      border: none;
+      border-radius: 5px;
+      background: #f39c12;
+      color: #000;
+      font-weight: bold;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
 
-  <div class="header">
-    <h2>⚡ Bali VIP ⚡</h2>
+  <!-- Login -->
+  <div id="login">
+    <form id="formLogin">
+      <h2>Masukkan Kode Akses</h2>
+      <input type="password" id="kode" placeholder="Kode Rahasia" required>
+      <br>
+      <button type="submit">Masuk</button>
+    </form>
   </div>
 
-  <div class="date">2025-08-31 (Total Odds: 2.01)</div>
-
-  <div class="card">
-    <div class="league">spain : laliga 2</div>
-    <div class="match">
-      <div class="teams">leganes vs la coruna</div>
-      <div class="pick">DC 1X</div>
+  <!-- Konten Website -->
+  <div id="konten" style="display:none">
+    <div class="header">
+      <h2>⚡ Bali VIP ⚡</h2>
     </div>
-    <div class="odds">Odds: 1.21 | Score: -</div>
-    <div class="status win">WIN</div>
-  </div>
 
-  <div class="card">
-    <div class="league">inggris national liga</div>
-    <div class="match">
-      <div class="teams">chelmsford vs farnborough</div>
-      <div class="pick">Over 1.5</div>
+    <div class="date">2025-08-31 (Total Odds: 2.01)</div>
+
+    <div class="card">
+      <div class="league">spain : laliga 2</div>
+      <div class="match">
+        <div class="teams">leganes vs la coruna</div>
+        <div class="pick">DC 1X</div>
+      </div>
+      <div class="odds">Odds: 1.21 | Score: -</div>
+      <div class="status win">WIN</div>
     </div>
-    <div class="odds">Odds: 1.33 | Score: -</div>
-    <div class="status win">win</div>
-  </div>
 
-  <div class="card">
-    <div class="league">Romania superliga </div>
-    <div class="match">
-      <div class="teams">farul constanta vs petrolul</div>
-      <div class="pick">DC 1x</div>
+    <div class="card">
+      <div class="league">inggris national liga</div>
+      <div class="match">
+        <div class="teams">chelmsford vs farnborough</div>
+        <div class="pick">Over 1.5</div>
+      </div>
+      <div class="odds">Odds: 1.33 | Score: -</div>
+      <div class="status win">WIN</div>
     </div>
-    <div class="odds">Odds: 1.21 | Score: -</div>
-    <div class="status win">WIN</div>
+
+    <div class="card">
+      <div class="league">Romania superliga </div>
+      <div class="match">
+        <div class="teams">farul constanta vs petrolul</div>
+        <div class="pick">DC 1x</div>
+      </div>
+      <div class="odds">Odds: 1.21 | Score: -</div>
+      <div class="status win">WIN</div>
+    </div>
   </div>
 
+  <script>
+    // ====== KODE AKSES ======
+    const kodeBenar = "VIP123"; // ganti sesuai keinginanmu
+
+    const loginForm = document.getElementById("formLogin");
+
+    loginForm.addEventListener("submit", function(e) {
+      e.preventDefault();
+      const kodeInput = document.getElementById("kode").value;
+      if (kodeInput === kodeBenar) {
+        localStorage.setItem("akses","ok");
+        document.getElementById("login").style.display = "none";
+        document.getElementById("konten").style.display = "block";
+      } else {
+        alert("Kode salah!");
+      }
+    });
+
+    // kalau sudah pernah login, langsung masuk
+    if (localStorage.getItem("akses") === "ok") {
+      document.getElementById("login").style.display = "none";
+      document.getElementById("konten").style.display = "block";
+    }
+  </script>
 </body>
 </html>
