--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
   <div id="login">
     <form id="formLogin">
       <h2>Masukkan Kode Akses</h2>
-      <input type="password" id="kode" placeholder="Kode Rahasia" required>
+      <input type="password" id="kode" placeholder="KODE VIP" required>
       <br>
       <button type="submit">Masuk</button>
     </form>
