--- a/index.html
+++ b/index.html
@@ -148,33 +148,33 @@
     <div class="date">2025-08-31 (Total Odds: 2.01)</div>
 
     <div class="card">
-      <div class="league">spain : laliga 2</div>
+      <div class="league">Europe : World Cup</div>
       <div class="match">
-        <div class="teams">leganes vs la coruna</div>
-        <div class="pick">DC 1X</div>
+        <div class="teams">Croatia vs Montenegro</div>
+        <div class="pick">Croatia win</div>
       </div>
-      <div class="odds">Odds: 1.21 | Score: -</div>
-      <div class="status win">WIN</div>
+      <div class="odds">Odds: 1.30 | Score: -</div>
+      <div class="status win">pending</div>
     </div>
 
     <div class="card">
-      <div class="league">inggris national liga</div>
+      <div class="league">Europe : World Cup</div>
       <div class="match">
-        <div class="teams">chelmsford vs farnborough</div>
-        <div class="pick">Over 1.5</div>
+        <div class="teams">Kosovo vs Sweden</div>
+        <div class="pick">Over+ 1.5</div>
       </div>
-      <div class="odds">Odds: 1.33 | Score: -</div>
-      <div class="status win">WIN</div>
+      <div class="odds">Odds: 1.30 | Score: -</div>
+      <div class="status win">pending</div>
     </div>
 
     <div class="card">
-      <div class="league">Romania superliga </div>
+      <div class="league">Europe : World Cup</div>
       <div class="match">
-        <div class="teams">farul constanta vs petrolul</div>
-        <div class="pick">DC 1x</div>
+        <div class="teams">Israel vs Italy</div>
+        <div class="pick">Over+ 1.5</div>
       </div>
       <div class="odds">Odds: 1.21 | Score: -</div>
-      <div class="status win">WIN</div>
+      <div class="status win">pending</div>
     </div>
   </div>
 
