--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         <div class="pick">W1</div>
       </div>
       <div class="odds">Odds: 1.18 | Score: -</div>
-      <div class="status pending">pending</div>
+      <div class="status win">win</div>
     </div>
 
     <!-- Card 2 -->
@@ -216,7 +216,7 @@
         <div class="pick">HT-FT W2/W2</div>
       </div>
       <div class="odds">Odds: 2.75 | Score: -</div>
-      <div class="status pending">pending</div>
+      <div class="status lose">lose</div>
     </div>
 
     <!-- Card 3 -->
@@ -227,7 +227,7 @@
         <div class="pick">W1</div>
       </div>
       <div class="odds">Odds: 1.69 | Score: -</div>
-      <div class="status pending">pending</div>
+      <div class="status lose">lose</div>
     </div>
 
     <!-- Card 4 (Tambahan) -->
@@ -238,7 +238,7 @@
         <div class="pick">W1</div>
       </div>
       <div class="odds">Odds: 1.26 | Score: -</div>
-      <div class="status pending">pending</div>
+      <div class="status win">win</div>
     </div>
 
   </div>
