--- a/index.html
+++ b/index.html
@@ -195,50 +195,50 @@
       <h2>⚡ Bali VIP ⚡</h2>
     </div>
 
-    <div class="date">2025-08-31 (Total Odds: 6.9)</div>
+    <div class="date">2025-08-31 (Total Odds: 8.16)</div>
 
     <!-- Card 1 -->
     <div class="card match-card">
       <div class="league">Europe : World Cup</div>
       <div class="match">
-        <div class="teams">Croatia vs Montenegro</div>
-        <div class="pick">W1</div>
+        <div class="teams">Hungaria vs Portugal</div>
+        <div class="pick">W2</div>
       </div>
-      <div class="odds">Odds: 1.18 | Score: -</div>
-      <div class="status win">win</div>
+      <div class="odds">Odds: 1.42 | Score: -</div>
+      <div class="status pending">pending</div>
     </div>
 
     <!-- Card 2 -->
     <div class="card match-card">
       <div class="league">Europe : World Cup</div>
       <div class="match">
-        <div class="teams">Kosovo vs Sweden</div>
-        <div class="pick">HT-FT W2/W2</div>
+        <div class="teams">Serbia vs Inggris</div>
+        <div class="pick">W2</div>
       </div>
-      <div class="odds">Odds: 2.75 | Score: -</div>
-      <div class="status lose">lose</div>
+      <div class="odds">Odds: 1.94 | Score: -</div>
+      <div class="status pending">pending</div>
     </div>
 
     <!-- Card 3 -->
     <div class="card match-card">
-      <div class="league">Ramah International</div>
+      <div class="league">Europe : World Cup</div>
       <div class="match">
-        <div class="teams">Indonesia vs Lebanon</div>
-        <div class="pick">W1</div>
+        <div class="teams">Islandia vs Prancis</div>
+        <div class="pick">W2</div>
       </div>
-      <div class="odds">Odds: 1.69 | Score: -</div>
-      <div class="status lose">lose</div>
+      <div class="odds">Odds: 1.09 | Score: -</div>
+      <div class="status pending">pending</div>
     </div>
 
     <!-- Card 4 (Tambahan) -->
     <div class="card match-card">
       <div class="league">Europe : World Cup</div>
       <div class="match">
-        <div class="teams">Madagascar vs Chad</div>
-        <div class="pick">W1</div>
+        <div class="teams">Ekuador vs argentina</div>
+        <div class="pick">W2</div>
       </div>
-      <div class="odds">Odds: 1.26 | Score: -</div>
-      <div class="status win">win</div>
+      <div class="odds">Odds: 2.28 | Score: -</div>
+      <div class="status pending">pending</div>
     </div>
 
   </div>
