--- a/index.html
+++ b/index.html
@@ -240,6 +240,15 @@
       <div class="odds">Odds: 2.28 | Score: -</div>
       <div class="status pending">pending</div>
     </div>
+    <div class="card match-card">
+      <div class="league">Europe : World Cup</div>
+      <div class="match">
+        <div class="teams">Bolivia vs Brazil</div>
+        <div class="pick">W2</div>
+      </div>
+      <div class="odds">Odds2.28 | Score: -</div>
+      <div class="status pending">pending</div>
+    </div>
 
   </div>
 
