--- a/index.html
+++ b/index.html
@@ -204,8 +204,8 @@
         <div class="teams">Hungaria vs Portugal</div>
         <div class="pick">W2</div>
       </div>
-      <div class="odds">Odds: 1.42 | Score: -</div>
-      <div class="status pending">pending</div>
+      <div class="odds">Odds: 1.42 | Score: 2-3</div>
+      <div class="status win">win</div>
     </div>
 
     <!-- Card 2 -->
@@ -215,8 +215,8 @@
         <div class="teams">Serbia vs Inggris</div>
         <div class="pick">W2</div>
       </div>
-      <div class="odds">Odds: 1.94 | Score: -</div>
-      <div class="status pending">pending</div>
+      <div class="odds">Odds: 1.94 | Score: 0-5</div>
+      <div class="status win">win</div>
     </div>
 
     <!-- Card 3 -->
@@ -226,8 +226,8 @@
         <div class="teams">Islandia vs Prancis</div>
         <div class="pick">W2</div>
       </div>
-      <div class="odds">Odds: 1.09 | Score: -</div>
-      <div class="status pending">pending</div>
+      <div class="odds">Odds: 1.09 | Score: 1-2</div>
+      <div class="status win">win</div>
     </div>
 
     <!-- Card 4 (Tambahan) -->
