--- a/index.html
+++ b/index.html
@@ -199,55 +199,55 @@
 
     <!-- Card 1 -->
     <div class="card match-card">
-      <div class="league">Europe : World Cup</div>
+      <div class="league">league 1 Norway</div>
       <div class="match">
-        <div class="teams">Hungaria vs Portugal</div>
-        <div class="pick">W2</div>
+        <div class="teams">bodo glimpt vs kristiansund</div>
+        <div class="pick">M1 dan T.U (4.5)</div>
       </div>
-      <div class="odds">Odds: 1.42 | Score: 2-3</div>
-      <div class="status win">win</div>
+      <div class="odds">Odds: 2.07 | Score: -</div>
+      <div class="status pending">pending</div>
     </div>
 
     <!-- Card 2 -->
     <div class="card match-card">
-      <div class="league">Europe : World Cup</div>
+      <div class="league">Bundesliga</div>
       <div class="match">
-        <div class="teams">Serbia vs Inggris</div>
-        <div class="pick">W2</div>
+        <div class="teams">bayer Leverkusen vs Eintracht Frankfurt</div>
+        <div class="pick">M1 dan T.U (4.5)</div>
       </div>
-      <div class="odds">Odds: 1.94 | Score: 0-5</div>
-      <div class="status win">win</div>
+      <div class="odds">Odds: 2.98 | Score: -</div>
+      <div class="status pending">pending</div>
     </div>
 
     <!-- Card 3 -->
     <div class="card match-card">
-      <div class="league">Europe : World Cup</div>
+      <div class="league">France : League 1</div>
       <div class="match">
-        <div class="teams">Islandia vs Prancis</div>
-        <div class="pick">W2</div>
+        <div class="teams">Marseille vs Lorient</div>
+        <div class="pick">M1 dan T.U (4.5)</div>
       </div>
-      <div class="odds">Odds: 1.09 | Score: 1-2</div>
-      <div class="status win">win</div>
+      <div class="odds">Odds: 1.81 | Score: -</div>
+      <div class="status pending">pending</div>
     </div>
 
     <!-- Card 4 (Tambahan) -->
     <div class="card match-card">
-      <div class="league">Europe : World Cup</div>
+      <div class="league">League 1 Portugal</div>
       <div class="match">
-        <div class="teams">Ekuador vs argentina</div>
-        <div class="pick">W2</div>
+        <div class="teams">Benfica vs Santa Clara</div>
+        <div class="pick">M1 dan T.O (1.5)</div>
       </div>
-      <div class="odds">Odds: 2.28 | Score: -</div>
+      <div class="odds">Odds: 1.5 | Score: -</div>
       <div class="status pending">pending</div>
     </div>
     <div class="card match-card">
-      <div class="league">Europe : World Cup</div>
+      <div class="league"></div>
       <div class="match">
-        <div class="teams">Bolivia vs Brazil</div>
-        <div class="pick">W2</div>
+        <div class="teams"NO TIPS YET</div>
+        <div class="pick"></div>
       </div>
-      <div class="odds">Odds2.28 | Score: -</div>
-      <div class="status pending">pending</div>
+      <div class="odds"> | Score: -</div>
+      <div class=""></div>
     </div>
 
   </div>
