--- a/index.html
+++ b/index.html
@@ -213,9 +213,9 @@
       <div class="league">Bundesliga</div>
       <div class="match">
         <div class="teams">bayer Leverkusen vs Eintracht Frankfurt</div>
-        <div class="pick">M1 dan T.U (4.5)</div>
+        <div class="pick">M2 dan T.U (4.5)</div>
       </div>
-      <div class="odds">Odds: 2.98 | Score: -</div>
+      <div class="odds">Odds: 3.98 | Score: -</div>
       <div class="status pending">pending</div>
     </div>
 
@@ -243,8 +243,8 @@
     <div class="card match-card">
       <div class="league"></div>
       <div class="match">
-        <div class="teams"NO TIPS YET</div>
-        <div class="pick"></div>
+        <div class="teams"</div>
+        <div class="pick">NO TIPS YET</div>
       </div>
       <div class="odds"> | Score: -</div>
       <div class=""></div>
