--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
   <!-- Konten Website -->
   <div id="konten" style="display:none">
     <div class="header">
-      <h2>⚡ Bali VIP ⚡</h2>
+      <h2>⚡ FORLAN VIP ⚡</h2>
     </div>
 
     <div class="date">2025-08-31 (Total Odds: 18.62)</div>
