--- a/index.html
+++ b/index.html
@@ -192,64 +192,43 @@
   <!-- Konten Website -->
   <div id="konten" style="display:none">
     <div class="header">
-      <h2>⚡ FORLAN VIP ⚡</h2>
+      <h2>⚡ WANN VIP ⚡</h2>
     </div>
 
     <div class="date">2025-08-31 (Total Odds: 18.62)</div>
 
     <!-- Card 1 -->
     <div class="card match-card">
-      <div class="league">league 1 Norway</div>
+      <div class="league">UEFA : EUROPE LEAGUE</div>
       <div class="match">
-        <div class="teams">bodo glimpt vs kristiansund</div>
-        <div class="pick">M1 dan T.U (4.5)</div>
+        <div class="teams">LYON VS SALZBURG</div>
+        <div class="pick">LYON WIN OR DRAW</div>
       </div>
-      <div class="odds">Odds: 2.07 | Score: -</div>
+      <div class="odds">Odds: 1.3 | Score: -</div>
       <div class="status pending">pending</div>
     </div>
 
     <!-- Card 2 -->
     <div class="card match-card">
-      <div class="league">Bundesliga</div>
+      <div class="league">UEFA : EUROPE LEAGUE</div>
       <div class="match">
-        <div class="teams">bayer Leverkusen vs Eintracht Frankfurt</div>
-        <div class="pick">M2 dan T.U (4.5)</div>
+        <div class="teams">BASEL VS STUTTGART</div>
+        <div class="pick">OVER +1.5</div>
       </div>
-      <div class="odds">Odds: 3.98 | Score: -</div>
+      <div class="odds">Odds: 1.25 | Score: -</div>
       <div class="status pending">pending</div>
     </div>
 
     <!-- Card 3 -->
     <div class="card match-card">
-      <div class="league">France : League 1</div>
+      <div class="league">UEFA : EUROPE LEAGUE</div>
       <div class="match">
-        <div class="teams">Marseille vs Lorient</div>
-        <div class="pick">M1 dan T.U (4.5)</div>
+        <div class="teams">AS ROMA VS LILLE OSC</div>
+        <div class="pick">AS ROMA WIN OR DRAW</div>
       </div>
-      <div class="odds">Odds: 1.81 | Score: -</div>
+      <div class="odds">Odds: 1.30 | Score: -</div>
       <div class="status pending">pending</div>
     </div>
-
-    <!-- Card 4 (Tambahan) -->
-    <div class="card match-card">
-      <div class="league">League 1 Portugal</div>
-      <div class="match">
-        <div class="teams">Benfica vs Santa Clara</div>
-        <div class="pick">M1 dan T.O (1.5)</div>
-      </div>
-      <div class="odds">Odds: 1.5 | Score: -</div>
-      <div class="status pending">pending</div>
-    </div>
-    <div class="card match-card">
-      <div class="league"></div>
-      <div class="match">
-        <div class="teams"</div>
-        <div class="pick">NO TIPS YET</div>
-      </div>
-      <div class="odds"> | Score: -</div>
-      <div class=""></div>
-    </div>
-
   </div>
 
   <script>
