--- a/index.html
+++ b/index.html
@@ -219,8 +219,8 @@
         <div class="teams">LYON VS SALZBURG</div>
         <div class="pick">LYON WIN OR DRAW</div>
       </div>
-      <div class="odds">Odds: 1.3 | Score: -</div>
-      <div class="status pending">Pending</div>
+      <div class="odds">Odds: 1.3 | Score: 2-0</div>
+      <div class="status win">WIN</div>
     </div>
 
     <div class="card match-card">
@@ -229,8 +229,8 @@
         <div class="teams">BASEL VS STUTTGART</div>
         <div class="pick">OVER +1.5</div>
       </div>
-      <div class="odds">Odds: 1.25 | Score: -</div>
-      <div class="status pending">Pending</div>
+      <div class="odds">Odds: 1.25 | Score: 2-0</div>
+      <div class="status win">WIN</div>
     </div>
   </div>
 
