--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
   <!-- Konten FREE -->
   <div id="kontenFree">
-    <div class="header"><h2>🔥 FREE TIPS 🔥</h2></div>
+    <div class="header"><h2>🔥 BS.COM 🔥</h2></div>
     <div class="date">2025-08-31 (Total Odds: 1.80)</div>
 
     <div class="card match-card">
@@ -210,7 +210,7 @@
 
   <!-- Konten VIP -->
   <div id="kontenVIP" style="display:none">
-    <div class="header"><h2>⚡ VIP TIPS ⚡</h2></div>
+    <div class="header"><h2>⚡ BS.COM VIP ⚡</h2></div>
     <div class="date">2025-08-31 (Total Odds: 2.11)</div>
 
     <div class="card match-card">
