--- a/index.html
+++ b/index.html
@@ -188,25 +188,36 @@
     <div class="date">2025-08-31 (Total Odds: 1.80)</div>
 
     <div class="card match-card">
-      <div class="league">PREMIER LEAGUE</div>
+      <div class="league">AFRICA</div>
       <div class="match">
-        <div class="teams">CHELSEA VS WEST HAM</div>
-        <div class="pick">OVER +1.5</div>
+        <div class="teams">CAMEROON VS GABON</div>
+        <div class="pick">HOME OR DRAW</div>
       </div>
-      <div class="odds">Odds: 1.25 | Score: -</div>
+      <div class="odds">Odds: 1.40 | Score: -</div>
       <div class="status pending">Pending</div>
     </div>
 
     <div class="card match-card">
-      <div class="league">LA LIGA</div>
+      <div class="league">TURKEY</div>
       <div class="match">
-        <div class="teams">SEVILLA VS VILLARREAL</div>
+        <div class="teams">SAMSUNSPOR VS EYUPSPOR</div>
         <div class="pick">HOME OR DRAW</div>
       </div>
-      <div class="odds">Odds: 1.30 | Score: -</div>
+      <div class="odds">Odds: 1.25 | Score: -</div>
       <div class="status pending">Pending</div>
     </div>
   </div>
+
+  <div class="card match-card">
+      <div class="league">AFC CHAMPIONS LEAGUE 2</div>
+      <div class="match">
+        <div class="teams">AL NASSR VS ALZAWRA</div>
+        <div class="pick">AL NASSR OVER 1.5</div>
+      </div>
+      <div class="odds">Odds: 1.35 | Score: -</div>
+      <div class="status pending">Pending</div>
+    </div>
+</div>
 
   <!-- Konten VIP -->
   <div id="kontenVIP" style="display:none">
@@ -214,23 +225,23 @@
     <div class="date">2025-08-31 (Total Odds: 2.11)</div>
 
     <div class="card match-card">
-      <div class="league">UEFA : EUROPE LEAGUE</div>
+      <div class="league">PIALA AFRIKA</div>
       <div class="match">
-        <div class="teams">LYON VS SALZBURG</div>
-        <div class="pick">LYON WIN OR DRAW</div>
+        <div class="teams">IVORY COAST VS MOZAMBIK</div>
+        <div class="pick">CORRECT SCORE : 2-0</div>
       </div>
       <div class="odds">Odds: 1.3 | Score: 2-0</div>
-      <div class="status win">WIN</div>
+      <div class="status pending">PENDING</div>
     </div>
 
     <div class="card match-card">
-      <div class="league">UEFA : EUROPE LEAGUE</div>
+      <div class="league">PIALA AFRIKA</div>
       <div class="match">
-        <div class="teams">BASEL VS STUTTGART</div>
-        <div class="pick">OVER +1.5</div>
+        <div class="teams">ALGERIA VS SUDAN</div>
+        <div class="pick">CORRECT SCORE : 2-0</div>
       </div>
-      <div class="odds">Odds: 1.25 | Score: 2-0</div>
-      <div class="status win">WIN</div>
+      <div class="odds">Odds: 5 | Score: </div>
+      <div class="status pending">PENDING</div>
     </div>
   </div>
 
