--- a/index.html
+++ b/index.html
@@ -1,297 +1,150 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FORLAN PICK</title>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: Arial, sans-serif;
-    }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>FORLAN PICK</title>
 
-    body {
-      background: #111;
-      color: #fff;
-      padding: 15px;
-    }
+<style>
+*{margin:0;padding:0;box-sizing:border-box;font-family:Arial,sans-serif}
+body{background:#111;color:#fff;padding:15px}
 
-    /* ===== NAVIGATION TAB ===== */
-    .tabs {
-      display: flex;
-      justify-content: center;
-      margin-bottom: 15px;
-      gap: 10px;
-    }
-    .tab {
-      padding: 8px 18px;
-      border-radius: 6px;
-      cursor: pointer;
-      font-weight: bold;
-      transition: 0.3s;
-    }
-    .tab.free { background: #f39c12; color: #000; }
-    .tab.vip { background: #444; color: #fff; }
-    .tab.active { background: #e67e22; color: #000; }
+/* TAB */
+.tabs{display:flex;justify-content:center;gap:10px;margin-bottom:15px}
+.tab{padding:8px 18px;border-radius:6px;cursor:pointer;font-weight:bold}
+.tab.free{background:#f39c12;color:#000}
+.tab.vip{background:#444;color:#fff}
+.tab.active{background:#e67e22;color:#000}
 
-    /* ===== HEADER & CONTENT ===== */
-    .header {
-      text-align: center;
-      margin-bottom: 20px;
-      animation: fadeIn 0.8s ease-in-out;
-    }
-    .date {
-      background: #f1c40f;
-      color: #000;
-      font-weight: bold;
-      padding: 6px 10px;
-      border-radius: 5px;
-      display: inline-block;
-      margin-bottom: 10px;
-    }
+/* CARD */
+.header{text-align:center;margin-bottom:15px}
+.date{background:#f1c40f;color:#000;font-weight:bold;padding:6px 10px;border-radius:5px;display:inline-block;margin-bottom:10px}
+.card{background:#222;padding:15px;border-radius:10px;margin-bottom:15px}
+.league{font-size:14px;color:#bbb;margin-bottom:6px}
+.match{display:flex;justify-content:space-between;align-items:center}
+.teams{font-weight:bold}
+.pick{background:#f39c12;color:#000;font-weight:bold;padding:5px 10px;border-radius:5px}
+.odds{color:#ccc;margin-top:5px}
+.status{margin-top:5px;font-weight:bold;padding:3px 8px;border-radius:5px;display:inline-block}
+.pending{background:#f1c40f;color:#000}
 
-    .card {
-      background: #222;
-      padding: 15px;
-      border-radius: 10px;
-      margin-bottom: 15px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.5);
-      transition: transform 0.2s, box-shadow 0.2s;
-      animation: fadeInUp 0.6s ease-in-out;
-    }
-    .card:hover {
-      transform: translateY(-3px);
-      box-shadow: 0 4px 12px rgba(0,0,0,0.7);
-    }
-    .league {
-      font-size: 14px;
-      color: #bbb;
-      margin-bottom: 8px;
-    }
-    .match {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 10px;
-    }
-    .teams {
-      font-size: 16px;
-      font-weight: bold;
-    }
-    .pick {
-      background: #f39c12;
-      color: #000;
-      font-weight: bold;
-      padding: 5px 10px;
-      border-radius: 5px;
-    }
-    .odds {
-      font-size: 14px;
-      color: #ccc;
-      margin-top: 5px;
-    }
-    .status {
-      margin-top: 5px;
-      font-weight: bold;
-      font-size: 14px;
-      padding: 3px 8px;
-      border-radius: 5px;
-      display: inline-block;
-      text-transform: capitalize;
-    }
-    .status.pending { background: #f1c40f; color: #000; }
-    .status.win { background: #2ecc71; color: #000; }
-    .status.lose { background: #e74c3c; color: #fff; }
-
-    /* ===== LOGIN MODAL ===== */
-    #login {
-      position: fixed;
-      inset: 0;
-      background: rgba(0,0,0,0.6);
-      display: none;
-      align-items: center;
-      justify-content: center;
-      z-index: 2000;
-    }
-    #login form {
-      background: #222;
-      padding: 20px;
-      border-radius: 10px;
-      text-align: center;
-      width: 280px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.7);
-      position: relative;
-      animation: fadeInUp 0.5s ease-in-out;
-    }
-    #login label {
-      display: block;
-      margin-bottom: 6px;
-      font-weight: bold;
-      color: #f39c12;
-      text-align: left;
-    }
-    #login input {
-      padding: 10px;
-      margin-bottom: 12px;
-      border: none;
-      border-radius: 5px;
-      width: 100%;
-      text-align: center;
-    }
-    #login button {
-      padding: 10px 20px;
-      border: none;
-      border-radius: 5px;
-      background: #f39c12;
-      color: #000;
-      font-weight: bold;
-      cursor: pointer;
-      width: 100%;
-    }
-    #login button:hover { background: #d35400; }
-
-    /* Close button */
-    .closeBtn {
-      position: absolute;
-      top: 8px;
-      right: 12px;
-      cursor: pointer;
-      color: #f39c12;
-      font-size: 18px;
-      font-weight: bold;
-    }
-
-    /* Animasi */
-    @keyframes fadeIn {
-      from { opacity: 0; }
-      to { opacity: 1; }
-    }
-    @keyframes fadeInUp {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-  </style>
+/* LOGIN */
+#login{position:fixed;inset:0;background:rgba(0,0,0,.7);display:none;align-items:center;justify-content:center}
+#login form{background:#222;padding:20px;border-radius:10px;width:260px;text-align:center}
+#login input{width:100%;padding:10px;margin:10px 0;border-radius:5px;border:none}
+#login button{width:100%;padding:10px;background:#f39c12;border:none;font-weight:bold;cursor:pointer}
+.close{position:absolute;top:10px;right:15px;cursor:pointer}
+</style>
 </head>
+
 <body>
 
-  <!-- Tabs -->
-  <div class="tabs">
-    <div class="tab free active" id="tabFree">🔥 FREE</div>
-    <div class="tab vip" id="tabVip">⚡ VIP</div>
-  </div>
-
-  <!-- Konten FREE -->
-  <div id="kontenFree">
-    <div class="header"><h2>🔥 BS.COM 🔥</h2></div>
-    <div class="date">2025-08-31 (Total Odds: 1.80)</div>
-
-    <div class="card match-card">
-      <div class="league">AFRICA</div>
-      <div class="match">
-        <div class="teams">CAMEROON VS GABON</div>
-        <div class="pick">HOME OR DRAW</div>
-      </div>
-      <div class="odds">Odds: 1.40 | Score: -</div>
-      <div class="status pending">Pending</div>
-    </div>
-
-    <div class="card match-card">
-      <div class="league">TURKEY</div>
-      <div class="match">
-        <div class="teams">SAMSUNSPOR VS EYUPSPOR</div>
-        <div class="pick">HOME OR DRAW</div>
-      </div>
-      <div class="odds">Odds: 1.25 | Score: -</div>
-      <div class="status pending">Pending</div>
-    </div>
-  </div>
-
-  <div class="card match-card">
-      <div class="league">AFC CHAMPIONS LEAGUE 2</div>
-      <div class="match">
-        <div class="teams">AL NASSR VS ALZAWRA</div>
-        <div class="pick">AL NASSR OVER 1.5</div>
-      </div>
-      <div class="odds">Odds: 1.35 | Score: -</div>
-      <div class="status pending">Pending</div>
-    </div>
+<!-- TAB -->
+<div class="tabs">
+  <div class="tab free active" id="tabFree">🔥 FREE</div>
+  <div class="tab vip" id="tabVip">⚡ VIP</div>
 </div>
 
-  <!-- Konten VIP -->
-  <div id="kontenVIP" style="display:none">
-    <div class="header"><h2>⚡ BS.COM VIP ⚡</h2></div>
-    <div class="date">2025-08-31 (Total Odds: 2.11)</div>
+<!-- FREE -->
+<div id="kontenFree">
+  <div class="header"><h2>🔥 BS.COM 🔥</h2></div>
+  <div class="date">2025-08-31 (Total Odds: 1.80)</div>
 
-    <div class="card match-card">
-      <div class="league">PIALA AFRIKA</div>
-      <div class="match">
-        <div class="teams">IVORY COAST VS MOZAMBIK</div>
-        <div class="pick">CORRECT SCORE : 2-0</div>
-      </div>
-      <div class="odds">Odds: 1.3 | Score: 2-0</div>
-      <div class="status pending">PENDING</div>
+  <div class="card">
+    <div class="league">AFRICA</div>
+    <div class="match">
+      <div class="teams">CAMEROON VS GABON</div>
+      <div class="pick">HOME OR DRAW</div>
     </div>
-
-    <div class="card match-card">
-      <div class="league">PIALA AFRIKA</div>
-      <div class="match">
-        <div class="teams">ALGERIA VS SUDAN</div>
-        <div class="pick">CORRECT SCORE : 2-0</div>
-      </div>
-      <div class="odds">Odds: 5 | Score: </div>
-      <div class="status pending">PENDING</div>
-    </div>
+    <div class="odds">Odds: 1.40</div>
+    <div class="status pending">Pending</div>
   </div>
 
-  <!-- Login Modal -->
-  <div id="login">
-    <form id="formLogin">
-      <span class="closeBtn" onclick="document.getElementById('login').style.display='none'">✖</span>
-      <h2>Masukkan Kode VIP</h2>
-      <label for="kode">Kode Akses</label>
-      <input type="password" id="kode" placeholder="KODE VIP" required>
-      <button type="submit">Masuk</button>
-    </form>
+  <div class="card">
+    <div class="league">TURKEY</div>
+    <div class="match">
+      <div class="teams">SAMSUNSPOR VS EYUPSPOR</div>
+      <div class="pick">HOME OR DRAW</div>
+    </div>
+    <div class="odds">Odds: 1.25</div>
+    <div class="status pending">Pending</div>
   </div>
 
-  <script>
-    const tabFree = document.getElementById("tabFree");
-    const tabVip = document.getElementById("tabVip");
-    const kontenFree = document.getElementById("kontenFree");
-    const kontenVIP = document.getElementById("kontenVIP");
-    const login = document.getElementById("login");
-    const kodeBenar = "VIP123"; // ubah sesuai keinginanmu
+  <div class="card">
+    <div class="league">AFC CHAMPIONS LEAGUE 2</div>
+    <div class="match">
+      <div class="teams">AL NASSR VS ALZAWRA</div>
+      <div class="pick">AL NASSR OVER 1.5</div>
+    </div>
+    <div class="odds">Odds: 1.35</div>
+    <div class="status pending">Pending</div>
+  </div>
+</div>
 
-    // Klik tab FREE
-    tabFree.addEventListener("click", () => {
-      tabFree.classList.add("active");
-      tabVip.classList.remove("active");
-      kontenFree.style.display = "block";
-      kontenVIP.style.display = "none";
-    });
+<!-- VIP -->
+<div id="kontenVIP" style="display:none">
+  <div class="header"><h2>⚡ BS.COM VIP ⚡</h2></div>
+  <div class="date">2025-08-31 (Total Odds: 2.11)</div>
 
-    // Klik tab VIP
-    tabVip.addEventListener("click", () => {
-      login.style.display = "flex";
-    });
+  <div class="card">
+    <div class="league">PIALA AFRIKA</div>
+    <div class="match">
+      <div class="teams">IVORY COAST VS MOZAMBIK</div>
+      <div class="pick">CORRECT SCORE 2-0</div>
+    </div>
+    <div class="odds">Odds: 1.3</div>
+    <div class="status pending">Pending</div>
+  </div>
 
-    // Form Login
-    const loginForm = document.getElementById("formLogin");
-    loginForm.addEventListener("submit", function(e) {
-      e.preventDefault();
-      const kodeInput = document.getElementById("kode").value;
-      if (kodeInput === kodeBenar) {
-        login.style.display = "none";
-        tabVip.classList.add("active");
-        tabFree.classList.remove("active");
-        kontenVIP.style.display = "block";
-        kontenFree.style.display = "none";
-      } else {
-        alert("Kode salah!");
-      }
-    });
-  </script>
+  <div class="card">
+    <div class="league">PIALA AFRIKA</div>
+    <div class="match">
+      <div class="teams">ALGERIA VS SUDAN</div>
+      <div class="pick">CORRECT SCORE 2-0</div>
+    </div>
+    <div class="odds">Odds: 5</div>
+    <div class="status pending">Pending</div>
+  </div>
+</div>
+
+<!-- LOGIN -->
+<div id="login">
+  <form id="formLogin">
+    <div class="close" onclick="login.style.display='none'">✖</div>
+    <h3>Masukkan Kode VIP</h3>
+    <input type="password" id="kode" placeholder="KODE VIP" required>
+    <button>Masuk</button>
+  </form>
+</div>
+
+<script>
+const tabFree=document.getElementById("tabFree")
+const tabVip=document.getElementById("tabVip")
+const kontenFree=document.getElementById("kontenFree")
+const kontenVIP=document.getElementById("kontenVIP")
+const login=document.getElementById("login")
+const kodeBenar="VIP123"
+
+tabFree.onclick=()=>{
+  tabFree.classList.add("active")
+  tabVip.classList.remove("active")
+  kontenFree.style.display="block"
+  kontenVIP.style.display="none"
+}
+
+tabVip.onclick=()=>login.style.display="flex"
+
+formLogin.onsubmit=e=>{
+  e.preventDefault()
+  if(kode.value===kodeBenar){
+    login.style.display="none"
+    tabVip.classList.add("active")
+    tabFree.classList.remove("active")
+    kontenVIP.style.display="block"
+    kontenFree.style.display="none"
+  }else alert("Kode salah!")
+}
+</script>
+
 </body>
 </html>
