Update dates and odds in index.html

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ body{background:#111;color:#fff;padding:15px}
 <!-- FREE -->
 <div id="kontenFree">
   <div class="header"><h2>🔥 BS.COM 🔥</h2></div>
-  <div class="date">2025-08-31 (Total Odds: 1.80)</div>
+  <div class="date">24-12-2025 (Total Odds: 2.3)</div>
 
   <div class="card">
     <div class="league">AFRICA</div>
@@ -84,7 +84,7 @@ body{background:#111;color:#fff;padding:15px}
 <!-- VIP -->
 <div id="kontenVIP" style="display:none">
   <div class="header"><h2>⚡ BS.COM VIP ⚡</h2></div>
-  <div class="date">2025-08-31 (Total Odds: 2.11)</div>
+  <div class="date">24-12-2025 (Total Odds: 27)</div>
 
   <div class="card">
     <div class="league">PIALA AFRIKA</div>
@@ -92,7 +92,7 @@ body{background:#111;color:#fff;padding:15px}
       <div class="teams">IVORY COAST VS MOZAMBIK</div>
       <div class="pick">CORRECT SCORE 2-0</div>
     </div>
-    <div class="odds">Odds: 5,4</div>
+    <div class="odds">Odds: 5.4</div>
     <div class="status pending">Pending</div>
   </div>
 
@@ -123,7 +123,7 @@ const tabVip=document.getElementById("tabVip")
 const kontenFree=document.getElementById("kontenFree")
 const kontenVIP=document.getElementById("kontenVIP")
 const login=document.getElementById("login")
-const kodeBenar="VIP123"
+const kodeBenar="ZXCVBNM00"
 
 tabFree.onclick=()=>{
   tabFree.classList.add("active")
