--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@ body{background:#111;color:#fff;padding:15px}
     <div class="league">PIALA AFRIKA</div>
     <div class="match">
       <div class="teams">ALGERIA VS SUDAN</div>
-      <div class="pick">CORRECT SCORE 2-0</div>
+      <div class="pick">CORRECT SCORE 3-0</div>
     </div>
     <div class="odds">Odds: 5</div>
-    <div class="status pending">Pending</div>
+    <div class="status win">win</div>
   </div>
 </div>
 
