--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ body{background:#111;color:#fff;padding:15px}
       <div class="pick">AL NASSR OVER 1.5</div>
     </div>
     <div class="odds">Odds: 1.35</div>
-    <div class="status pending">Pending</div>
+    <div class="status win">win</div>
   </div>
 </div>
 
