Update match statuses and correct scores in HTML

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ body{background:#111;color:#fff;padding:15px}
       <div class="pick">HOME OR DRAW</div>
     </div>
     <div class="odds">Odds: 1.40</div>
-    <div class="status pending">Pending</div>
+    <div class="status win">win</div>
   </div>
 
   <div class="card">
@@ -67,7 +67,7 @@ body{background:#111;color:#fff;padding:15px}
       <div class="pick">HOME OR DRAW</div>
     </div>
     <div class="odds">Odds: 1.25</div>
-    <div class="status pending">Pending</div>
+    <div class="status win">win</div>
   </div>
 
   <div class="card">
@@ -90,10 +90,10 @@ body{background:#111;color:#fff;padding:15px}
     <div class="league">PIALA AFRIKA</div>
     <div class="match">
       <div class="teams">IVORY COAST VS MOZAMBIK</div>
-      <div class="pick">CORRECT SCORE 2-0</div>
+      <div class="pick">CORRECT SCORE 1-0</div>
     </div>
     <div class="odds">Odds: 5.4</div>
-    <div class="status pending">Pending</div>
+    <div class="status win">win</div>
   </div>
 
   <div class="card">
