Update match details and odds in index.html

--- a/index.html
+++ b/index.html
@@ -48,38 +48,27 @@ body{background:#111;color:#fff;padding:15px}
 <!-- FREE -->
 <div id="kontenFree">
   <div class="header"><h2>🔥 BS.COM 🔥</h2></div>
-  <div class="date">24-12-2025 (Total Odds: 2.3)</div>
+  <div class="date">25-12-2025 (Total Odds: 2.1)</div>
 
   <div class="card">
-    <div class="league">AFRICA</div>
+    <div class="league">ARABIA PREMIER LEAGUE</div>
     <div class="match">
-      <div class="teams">CAMEROON VS GABON</div>
-      <div class="pick">HOME OR DRAW</div>
+      <div class="teams">AL RIYADH VS AL ETTIFAQ</div>
+      <div class="pick">AL RIYADH OVER 1.5</div>
     </div>
     <div class="odds">Odds: 1.40</div>
-    <div class="status win">win</div>
+    <div class="status pending">pending</div>
   </div>
 
   <div class="card">
-    <div class="league">TURKEY</div>
+    <div class="league">USA NBA</div>
     <div class="match">
-      <div class="teams">SAMSUNSPOR VS EYUPSPOR</div>
-      <div class="pick">HOME OR DRAW</div>
+      <div class="teams">NEW YORK KNICKS VS CLEVELAND</div>
+      <div class="pick">HOME WIN</div>
     </div>
-    <div class="odds">Odds: 1.25</div>
-    <div class="status win">win</div>
+    <div class="odds">Odds: 1.50</div>
+    <div class="status pending">pending</div>
   </div>
-
-  <div class="card">
-    <div class="league">AFC CHAMPIONS LEAGUE 2</div>
-    <div class="match">
-      <div class="teams">AL NASSR VS ALZAWRA</div>
-      <div class="pick">AL NASSR OVER 1.5</div>
-    </div>
-    <div class="odds">Odds: 1.35</div>
-    <div class="status win">win</div>
-  </div>
-</div>
 
 <!-- VIP -->
 <div id="kontenVIP" style="display:none">
